deploy/zk-verifier/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zk-verifier
  namespace: zk-verifier
spec:
  ports:
  - name: backend
    port: 3013
    protocol: TCP
    targetPort: 3013
  selector:
    app: zk-verifier
  type: ClusterIP
